name:                nuchain
version:             1.4.0.0
synopsis:            A high performance permissioned blockchain.
description:         An implementation of ScalableBFT running Pact as the Smart Contract Language
homepage:            https://github.com/buckie/nuchain
author:              Will Martino, Stuart Popejoy, Mark Nichols
maintainer:          dhanraj.dadhich@nuchain.co
copyright:           Copyright (C) 2014-2025 Dhanraj Dadhich
                     Copyright (C) 2014-2025 Megharaj Dadhich
                     Copyright 2024-2025 (C) NuChain LLC

license:             BSD3
license-file:        LICENSE

category:            Network
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type:     git
  location: git@github.com:buckie/kadena.git


flag db-adapters
    description: enable DB adapters for MySQL, MSSQL (TBD)
    manual: False
    default: False

library
  exposed-modules:     Apps.Nuchain.Client
                     , Apps.Nuchain.Server
                     , Nuchain.Execution.Pact
                     , Nuchain.Execution.Service
                     , Nuchain.Command
                     , Nuchain.Config
                     , Nuchain.Config.ClusterMembership
                     , Nuchain.Config.TMVar
                     , Nuchain.ConfigChange
                     , Nuchain.ConfigChange.Util
                     , Nuchain.Consensus.Handle
                     , Nuchain.Consensus.Handle.AppendEntries
                     , Nuchain.Consensus.Handle.Command
                     , Nuchain.Consensus.Handle.ElectionTimeout
                     , Nuchain.Consensus.Handle.HeartbeatTimeout
                     , Nuchain.Consensus.Handle.RequestVote
                     , Nuchain.Consensus.Handle.RequestVoteResponse
                     , Nuchain.Consensus.Publish
                     , Nuchain.Consensus.Service
                     , Nuchain.Consensus.Util
                     , Nuchain.Event
                     , Nuchain.Evidence.Service
                     , Nuchain.Evidence.Spec
                     , Nuchain.Execution.ConfigChange
                     , Nuchain.HTTP.ApiServer
                     , Nuchain.History.Persistence
                     , Nuchain.History.Service
                     , Nuchain.Log
                     , Nuchain.Log.LogApi
                     , Nuchain.Log.Persistence
                     , Nuchain.Log.Service
                     , Nuchain.Log.Types
                     , Nuchain.Message
                     , Nuchain.Messaging.Turbine
                     , Nuchain.Messaging.Turbine.AER
                     , Nuchain.Messaging.Turbine.General
                     , Nuchain.Messaging.Turbine.NewCMD
                     , Nuchain.Messaging.Turbine.RV
                     , Nuchain.Messaging.Turbine.Util
                     , Nuchain.Messaging.ZMQ
                     , Nuchain.Monitoring.EkgJson
                     , Nuchain.Monitoring.EkgMonitor
                     , Nuchain.Monitoring.EkgSnap
                     , Nuchain.Monitoring.Server
                     , Nuchain.PreProc.Service
                     , Nuchain.Private.Private
                     , Nuchain.Private.Service
                     , Nuchain.Sender.Service
                     , Nuchain.Spec.Simple
                     , Nuchain.Types
                     , Nuchain.Types.Base
                     , Nuchain.Types.Command
                     , Nuchain.Types.Comms
                     , Nuchain.Types.Config
                     , Nuchain.Types.ConfigChange
                     , Nuchain.Types.Crypto
                     , Nuchain.Types.Dispatch
                     , Nuchain.Types.Entity
                     , Nuchain.Types.Event
                     , Nuchain.Types.Evidence
                     , Nuchain.Types.Execution
                     , Nuchain.Types.History
                     , Nuchain.Types.HTTP
                     , Nuchain.Types.Log
                     , Nuchain.Types.Message
                     , Nuchain.Types.Message.AE
                     , Nuchain.Types.Message.AER
                     , Nuchain.Types.Message.NewCMD
                     , Nuchain.Types.Message.RV
                     , Nuchain.Types.Message.RVR
                     , Nuchain.Types.Message.Signed
                     , Nuchain.Types.Metric
                     , Nuchain.Types.PactDB
                     , Nuchain.Types.PreProc
                     , Nuchain.Types.Private
                     , Nuchain.Types.Sender
                     , Nuchain.Types.Spec
                     , Nuchain.Types.Sqlite
                     , Nuchain.Types.Turbine
                     , Nuchain.Util.Util
                     , Pact.Persist.CacheAdapter
                     , Pact.Persist.WriteBehind

  build-depends:       BoundedChan
                     , aeson
                     , aeson-pretty
                     , ansi-wl-pprint
                     , array
                     , async
                     , attoparsec
                     , auto-update
                     , base < 5
                     , base16-bytestring
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , binary
                     , bloomfilter
                     , bound
                     , bytestring
                     , Cabal
                     , cacophony
                     , cereal >= 0.5.4.0
                     , containers
                     , criterion
                     , crypto-api
                     , cryptonite
                     , data-default
                     , deepseq >= 1.4.2.0
                     , direct-sqlite
                     , directory
                     , ed25519-donna
                     , ekg >= 0.4 && < 0.5
                     , ekg-core >= 0.1.1.0 && < 0.2
                     , ekg-json
                     , enclosed-exceptions
                     , errors
                     , exceptions
                     , extra
                     , fast-logger
                     , filepath
                     , ghc-prim
                     , hashable
                     , hspec
                     , http-client
                     , lens >= 4.15
                     , lens-aeson
                     , lifted-base
                     , lz4
                     , megaparsec >= 7
                     , memory >= 0.13
                     , monad-control
                     , monad-loops
                     , monad-par
                     , mtl
                     , mtl-compat
                     , network
                     , pact == 3.4.*
                     , parallel
                     , parsers
                     , prelude-extras
                     , prettyprinter >= 1.2.1.1
                     , primitive
                     , process
                     , random
                     , safe
                     , safe-exceptions >= 0.1.4.0
                     , scientific >= 0.3.6.2
                     , semigroups
                     , servant
                     , servant-client
                     , servant-client-core
                     , snap-core
                     , servant-server
                     , snap-server
                     , sqlite-simple
                     , stm
                     , strict-tuple >= 0.1
                     , string-conv
                     , text >= 1.2.0.0 && < 1.3
                     , thyme
                     , time
                     , transformers
                     , trifecta >= 2.1
                     , unix >= 2.7.1.0
                     , unordered-containers
                     , utf8-string >= 1.0.1.1
                     , vector >= 0.11.0.0
                     , vector-space >= 0.10.4 && < 0.17
                     , wai-cors
                     , warp
                     , wreq
                     , yaml
                     , zeromq4-haskell >= 0.6.3
                     , zlib
  other-modules:     Paths_kuro
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -O3
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010
  if flag(db-adapters)
     cpp-options: -DDB_ADAPTERS=1

executable genconfs
  main-is:             GenerateConfigFiles.hs
  build-depends:       base < 5
                     , bytestring
                     , containers
                     , unordered-containers
                     , crypto-api
                     , directory
                     , ed25519-donna
                     , filepath
                     , nuchain
                     , network
                     , text
                     , thyme
                     , yaml
                     , pact
                     , data-default
                     , lens
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -rtsopts
  default-language:    Haskell2010

executable nuchainserver
  main-is:             NuchainServer.hs
  build-depends:       base < 5
                     , nuchain
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -O3 -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable nuchainclient
  main-is:             NuchainClient.hs
  build-depends:       base < 5
                     , nuchain
                     , base16-bytestring
                     , extra
  hs-source-dirs:      executables
  ghc-options:         -Wall -threaded -O3 -rtsopts -with-rtsopts=-N4
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-language:    Haskell2010

executable inserts
  main-is:       Main.hs
  other-modules: Util.TestRunner
  build-depends:       base < 5
                     , aeson
                     , cmdargs
                     , bytestring
                     , data-default
                     , ed25519-donna
                     , exceptions
                     , extra
                     , hspec
                     , http-client
                     , HUnit
                     , nuchain
                     , lens
                     , pact
                     , process
                     , safe
                     , text
                     , transformers
                     , trifecta
                     , unordered-containers
                     , wreq
                     , yaml
  hs-source-dirs:     executables/inserts
                    , tests
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N4

  default-language:   Haskell2010

test-suite hspec
  type: exitcode-stdio-1.0
  main-is: hspec.hs
  hs-source-dirs: tests
  ghc-options:       -Wall -threaded -O3 -rtsopts -with-rtsopts=-N4
  default-language:  Haskell2010
  other-modules:     CacheAdapterSpec
                   , ConfigChangeFileSpec
                   , ConfigChangeSpec
                   , ConfigSpec
                   , EvidenceSpec
                   , Util.TestRunner
                   , WireFormatSpec
  build-depends:     aeson
                   , async
                   , base
                   , base16-bytestring
                   , bytestring
                   , containers
                   , crypto-api
                   , data-default
                   , deepseq
                   , ed25519-donna
                   , errors
                   , exceptions
                   , extra
                   , hspec
                   , http-client
                   , nuchain
                   , lens
                   , mtl
                   , pact
                   , process
                   , safe
                   , safe-exceptions
                   , scientific
                   , scientific >= 0.3.6.2
                   , text
                   , transformers
                   , trifecta
                   , unordered-containers
                   , vector
                   , wreq
                   , yaml
